# effective-doodle

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
